removed 'magic numbers'

--- a/analysis_testing.ipynb
+++ b/analysis_testing.ipynb
@@ -2,11 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import math\n",
+    "from scipy.signal import find_peaks\n",
+    "from data_access import metadata_from_path"
    ]
   },
   {
@@ -18,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,15 +40,19 @@
     }
    ],
    "source": [
-    "data = 'data/2/exp02H20141204_17h28.csv'\n",
-    "experement = pd.read_csv(data)\n",
+    "data_path = 'data/2/exp02H20141204_17h28.csv'\n",
+    "FISH_ATTR_COUNT = 3 # how manny bits of info for each fish\n",
+    "\n",
+    "experement = pd.read_csv(data_path)\n",
     "a = experement.iloc[31000:,:]\n",
+    "\n",
+    "\n",
     "print(a.head(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -63,15 +72,15 @@
     }
    ],
    "source": [
-    "n_fish = experement.shape[1]//3\n",
-    "cols = [i+2 for i in range(0,n_fish*3,3)]\n",
+    "n_fish = experement.shape[1]//FISH_ATTR_COUNT\n",
+    "cols = [i+2 for i in range(0,n_fish*FISH_ATTR_COUNT,FISH_ATTR_COUNT)]\n",
     "headings = a.iloc[:, cols]\n",
     "print(headings.describe())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +95,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.hist(headings[\"H1\"], bins=1000)\n",
     "plt.xlabel(\"Heading\")\n",
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,10 +143,8 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import math\n",
     "\n",
-    "fps = 50\n",
+    "fps = metadata_from_path(data_path)['Fps']\n",
     "\n",
     "a_onelap = a.iloc[33000:33710, :]\n",
     "\n",
@@ -178,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +207,6 @@
     }
    ],
    "source": [
-    "fps = 50\n",
     "\n",
     "turn_rate = headings[\"H1\"].diff() * fps\n",
     "\n",
@@ -294,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -328,8 +333,8 @@
     "plt.legend()\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.plot(window.index / 50, window['H1'])\n",
-    "plt.axvline(turn_idx / 50, color='red', linestyle='--')\n",
+    "plt.plot(window.index / fps, window['H1'])\n",
+    "plt.axvline(turn_idx / fps, color='red', linestyle='--')\n",
     "plt.title(\"Heading (Radians) vs Time (s)\")\n",
     "\n",
     "plt.tight_layout()\n",
@@ -348,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +368,6 @@
    "source": [
     "#Help from gemini, have read thru documentation but not verified as of 17/02/26 16:24\n",
     "\n",
-    "from scipy.signal import find_peaks\n",
     "\n",
     "peaks, _ = find_peaks(sustained_turn.abs().fillna(0), \n",
     "                      height=np.pi, \n",
@@ -376,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +395,7 @@
     }
    ],
    "source": [
-    "def plot_path_and_bearings(df: pd.DataFrame, index: int, window: int = 150, fps:int = 50):\n",
+    "def plot_path_and_bearings(df: pd.DataFrame, index: int, window: int = 150, fps:int = fps):\n",
     "    start_idx = max(0, index - window)\n",
     "    end_idx = min(len(df), index + window)\n",
     "    plotting_range = slice(start_idx, end_idx)\n",
@@ -412,7 +416,7 @@
     "    ax1.set_title(f\"Physical Path (Frame {index})\")\n",
     "    ax1.legend()\n",
     "\n",
-    "    local_time = np.arange(len(sub_df)) / 50 \n",
+    "    local_time = np.arange(len(sub_df)) / fps \n",
     "    \n",
     "    # Extract the heading column (H1 is index 2)\n",
     "    heading_values = sub_df.iloc[:, 2].values \n",
@@ -420,7 +424,7 @@
     "    ax2.plot(local_time, heading_values)\n",
     "    \n",
     "    # Mark the peak relative to the start of this window\n",
-    "    peak_relative_time = (index - start_idx) / 50\n",
+    "    peak_relative_time = (index - start_idx) / fps\n",
     "    ax2.axvline(peak_relative_time, color='orange', linestyle='--', label=\"Peak Time\")\n",
     "    \n",
     "    ax2.set_xlabel(\"Seconds into window (s)\")\n",
