Add function to find significant turn events

--- a/analysis_testing.ipynb
+++ b/analysis_testing.ipynb
@@ -486,6 +486,21 @@
     "path = pd.read_csv(paths[0])\n",
     "\n",
     "def find_significant_events(experement:pd.DataFrame, window_size:int = 150, turn_threshold:float = np.pi):\n",
+    "    '''\n",
+    "    Filters arrays of the signifiacnt turn events and the angle (rad) of turn over the window. \n",
+    "\n",
+    "    experement : pd.DataFrame\n",
+    "        The raw data incluing column headings. \n",
+    "    window_size : int, optional\n",
+    "        The number of frames over which to calculate the turn (default is 150).\n",
+    "    turn_threshold : float, optional\n",
+    "        The radian value a turn must exceed to be 'significant' (default is pi).\n",
+    "\n",
+    "    Retruns:\n",
+    "    pd.DataFrame\n",
+    "        A dataframe of sustained turn values, keeping only the 'significant' rows.\n",
+    "        The original frame indices from the input are preserved.\n",
+    "    '''\n",
     "    headings = experement.iloc[:,2::3]\n",
     " \n",
     "    sustained_turn = headings.diff(periods=window_size)\n",
