--- a/analysis_testing.ipynb
+++ b/analysis_testing.ipynb
@@ -475,9 +475,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4806, 2)\n",
+      "           H1        H2\n",
+      "512  0.003270 -3.180343\n",
+      "513  0.002416 -3.246619\n",
+      "514  0.001556 -3.242455\n",
+      "515 -0.003390 -3.234891\n",
+      "516 -0.000979 -3.231716\n",
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
    "source": [
     "from data_access import get_experement_paths\n",
     "\n",
@@ -509,15 +524,276 @@
     "\n",
     "    return sustained_turn[filter]\n",
     "\n",
-    "significant_events = find_significant_events(path)\n"
+    "significant_events = find_significant_events(path)\n",
+    "print(significant_events.shape)\n",
+    "print(significant_events.head(5))\n",
+    "print(type(significant_events))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "(43, 2)\n",
+      "   column_name peak_index\n",
+      "0           H1        362\n",
+      "1           H1        521\n",
+      "2           H1        748\n",
+      "3           H1        902\n",
+      "4           H1       1102\n",
+      "5           H1       1365\n",
+      "6           H1       1535\n",
+      "7           H1       1768\n",
+      "8           H1       1949\n",
+      "9           H1       2118\n",
+      "10          H1       2269\n",
+      "11          H1       2425\n",
+      "12          H1       2624\n",
+      "13          H1       2787\n",
+      "14          H1       2971\n",
+      "15          H1       3142\n",
+      "16          H1       3298\n",
+      "17          H1       3523\n",
+      "18          H1       3685\n",
+      "19          H1       3901\n",
+      "20          H1       4055\n",
+      "21          H1       4276\n",
+      "22          H1       4479\n",
+      "23          H1       4733\n",
+      "24          H2         87\n",
+      "25          H2        688\n",
+      "26          H2        859\n",
+      "27          H2       1075\n",
+      "28          H2       1295\n",
+      "29          H2       1589\n",
+      "30          H2       2017\n",
+      "31          H2       2198\n",
+      "32          H2       2410\n",
+      "33          H2       2653\n",
+      "34          H2       2817\n",
+      "35          H2       3057\n",
+      "36          H2       3321\n",
+      "37          H2       3597\n",
+      "38          H2       3873\n",
+      "39          H2       4060\n",
+      "40          H2       4218\n",
+      "41          H2       4444\n",
+      "42          H2       4598\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_peaks_from_significant_events(significant_events):\n",
+    "\n",
+    "    all_peaks = (\n",
+    "    significant_events\n",
+    "    .apply(lambda x: find_peaks(x.abs().fillna(0), height=np.pi, distance=150)[0])\n",
+    "    .explode()\n",
+    "    .reset_index()\n",
+    "    )\n",
+    "    all_peaks.columns = ['column_name', 'peak_index']\n",
+    "\n",
+    "    return all_peaks\n",
+    "\n",
+    "peaks = find_peaks_from_significant_events(significant_events)\n",
+    "print(type(peaks))\n",
+    "print(peaks.shape)\n",
+    "print(peaks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "IDEA\n",
+    "- find corrolation between H2 and H1 for different turn thresholds and window sizes to get best values. (dosnt work)\n",
+    "\n",
+    "- time-lagged cross-corralation, would act on the (unfiltereed) sustained turn data.\n",
+    " - https://www.youtube.com/watch?v=dKDgihvtZGk\n",
+    " - https://www.statsmodels.org/dev/generated/statsmodels.tsa.stattools.ccf.html\n",
+    " - https://www.statsmodels.org/dev/generated/statsmodels.graphics.tsaplots.plot_ccf.html\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "paths = get_experement_paths(group_size = 2)\n",
+    "\n",
+    "path = pd.read_csv(paths[0])\n",
+    "\n",
+    "headings = experement.iloc[:,2::3]\n",
+    "\n",
+    "sustained_turn = headings.diff(periods=window_size)\n",
+    "\n",
+    "lags = np.arange(-100,100)\n",
+    "\n",
+    "cross_corr = [sustained_turn[\"H1\"].corr(sustained_turn[\"H2\"].shift(lag)) for lag in lags]\n",
+    "\n",
+    "best_lag = lags[np.argmax(cross_corr)]\n",
+    "\n",
+    "print(best_lag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(np.float64(0.8133622356946849), np.int64(10), np.int64(399)), (np.float64(0.7139596900216686), np.int64(-10), np.int64(399)), (np.float64(0.5712927045249668), np.int64(-20), np.int64(399)), (np.float64(0.8404526795039741), np.int64(-38), np.int64(399)), (np.float64(0.6446083736874949), np.int64(9), np.int64(399)), (np.float64(0.8907236975441347), np.int64(44), np.int64(399)), (np.float64(0.634321084310125), np.int64(-86), np.int64(399)), (np.float64(0.5935536193626172), np.int64(16), np.int64(399)), (np.float64(0.4886095349062089), np.int64(69), np.int64(399)), (np.float64(0.6572135617401764), np.int64(5), np.int64(399))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "paths = get_experement_paths(group_size = 2)\n",
+    "\n",
+    "window_sizes = np.arange(175, 400)\n",
+    "lags = np.arange(-100, 100)\n",
+    "\n",
+    "best_results_in_paths = []\n",
+    "\n",
+    "for path in paths:\n",
+    "    best_window_size = None\n",
+    "    best_lag = None\n",
+    "    best_correlation = -1\n",
+    "\n",
+    "    path_csv = pd.read_csv(path)\n",
+    "    headings = path_csv.iloc[:,2::3]\n",
+    "\n",
+    "    for window_size in window_sizes:\n",
+    "        \n",
+    "        sustained_turn = headings.diff(periods=window_size)\n",
+    "        \n",
+    "        for lag in lags:\n",
+    "\n",
+    "            cross_corr = sustained_turn[\"H1\"].corr(sustained_turn[\"H2\"].shift(lag))\n",
+    "            \n",
+    "            # 3. Update if better\n",
+    "            if cross_corr > best_correlation:\n",
+    "                best_correlation = cross_corr\n",
+    "                best_lag = lag\n",
+    "                best_window_size = window_size\n",
+    "\n",
+    "    best_results_in_paths.append((best_correlation,best_lag,best_window_size))\n",
+    "\n",
+    "print(best_results_in_paths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0.81336224  10.         399.        ]\n",
+      " [  0.71395969 -10.         399.        ]\n",
+      " [  0.5712927  -20.         399.        ]\n",
+      " [  0.84045268 -38.         399.        ]\n",
+      " [  0.64460837   9.         399.        ]\n",
+      " [  0.8907237   44.         399.        ]\n",
+      " [  0.63432108 -86.         399.        ]\n",
+      " [  0.59355362  16.         399.        ]\n",
+      " [  0.48860953  69.         399.        ]\n",
+      " [  0.65721356   5.         399.        ]]\n",
+      "-0.1 399.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#when window_size was set between 1 and 200 ()\n",
+    "'''\n",
+    "[[  0.77248418  -4.         199.        ]\n",
+    " [  0.61197755 -14.         199.        ]\n",
+    " [  0.48452243 -17.         199.        ]\n",
+    " [  0.77138746 -28.         199.        ]\n",
+    " [  0.55500128   9.         199.        ]\n",
+    " [  0.81096171  27.         199.        ]\n",
+    " [  0.47869719 -98.         199.        ]\n",
+    " [  0.50086965  16.         199.        ]\n",
+    " [  0.37462407  30.         199.        ]\n",
+    " [  0.58682914   1.         199.        ]]\n",
+    "'''\n",
+    "results_array = np.array(best_results_in_paths)\n",
+    "\n",
+    "mean_lag = sum(results_array[:,1])/len(results_array[:,1])\n",
+    "mean_window = sum(results_array[:,2])/len(results_array[:,2])\n",
+    "print(results_array)\n",
+    "print(mean_lag, mean_window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-15\n",
+      "150\n"
+     ]
+    }
+   ],
+   "source": [
+    "paths = get_experement_paths(group_size = 2)\n",
+    "path_csv = pd.read_csv(paths[1])\n",
+    "headings = path_csv.iloc[:,2::3]\n",
+    "\n",
+    "velocity = headings.diff(periods=5)\n",
+    "\n",
+    "rolling_windows = np.arange(25, 151, 5)\n",
+    "lags = np.arange(-100, 100) \n",
+    "\n",
+    "best_correlation = -1\n",
+    "\n",
+    "for r_window in rolling_windows:\n",
+    "    smoothed = velocity.rolling(window=r_window).mean()\n",
+    "    \n",
+    "    for lag in lags:\n",
+    "        score = smoothed[\"H1\"].corr(smoothed[\"H2\"].shift(lag))\n",
+    "        \n",
+    "        if score > best_correlation:\n",
+    "            best_correlation = score\n",
+    "            best_lag = lag\n",
+    "            best_window = r_window\n",
+    "\n",
+    "print(best_lag)\n",
+    "print(best_window)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just going to give up on this method\n",
+    "- lag fails the calcualtion if the fish change order of who is leading.\n",
+    "- The maths of cooralation is so much stronger for the relation of the fish turning in the same direction (moving in a circle) than the turning events.\n",
+    "- The preivous method, find_significant_events -> find_peaks_from_significant_events is cleaer dispite having the issue of arbituary values for window and turn threshold"
+   ]
   }
  ],
  "metadata": {
